fix dropdown z-index for redactor wysiwyg

--- a/public/table-builder.css
+++ b/public/table-builder.css
@@ -283,3 +283,8 @@ div.tb-uploaded-image-container div.editable-container{
     margin-top: -10px;
     margin-right: 0px;
 }
+
+/* Redactor */
+div.redactor-dropdown {
+    z-index: 110031 !important;
+}
